--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -272,4 +272,13 @@ ui bootstrap tweaks
   padding: 0 5px;
 }
 
+.buy-operation {
+  color: darkcyan;
+  alignment: center;
+}
+
+.sell-operation {
+  color: indianred;
+}
+
 /* jhipster-needle-scss-add-main JHipster will add new css style */
