--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -281,4 +281,27 @@ ui bootstrap tweaks
   color: indianred;
 }
 
+.outer-div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-bar {
+  margin-bottom: 1rem;
+}
+
+.ag-theme-quartz .ag-header {
+  text-align: center;
+}
+
+.ag-theme-quartz .ag-cell-label-container {
+  padding-top: 2px;
+}
+
+.ag-theme-quartz {
+  /* bright green, 10% opacity */
+  --ag-selected-row-background-color: rgb(0, 255, 0, 0.1);
+}
+
 /* jhipster-needle-scss-add-main JHipster will add new css style */
