--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -293,10 +293,48 @@ ui bootstrap tweaks
 
 .ag-theme-quartz .ag-header {
   text-align: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  margin-left: 0;
+  padding-left: 0;
+}
+.ag-theme-quartz .ag-header-cell {
+  text-align: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.ag-theme-quartz .ag-header-cell-label .ag-header-cell-text {
+  text-align: center;
+  font-size: 13px;
+  align-content: center;
+  align-items: center;
+  align-self: center;
 }
 
 .ag-theme-quartz .ag-cell-label-container {
   padding-top: 2px;
+  padding-bottom: 4px;
+}
+.ag-theme-quartz .ag-cell-wrapper {
+  padding-top: 0;
+  margin-top: 0;
+}
+div span.ag-cell-value {
+  padding-top: 0;
+  margin-top: 0;
+}
+.ag-theme-quartz .ag-cell {
+  padding-top: 0;
+  margin-top: 0;
+}
+.ag-theme-quartz .ag-header-cell-wrap-text {
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .ag-theme-quartz {
